--- a/Audio Controller.csproj
+++ b/Audio Controller.csproj
@@ -73,16 +73,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConsoleUpdater.cs" />
-    <Compile Include="DataProcessor.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Audio Controller\ConsoleUpdater.cs" />
+    <Compile Include="Audio Controller\DataProcessor.cs" />
+    <Compile Include="Audio Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerialConnection.cs" />
-    <Compile Include="VolumeController.cs" />
+    <Compile Include="Audio Controller\SerialConnection.cs" />
+    <Compile Include="Audio Controller\VolumeController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="Audio Controller\App.config" />
+    <None Include="Audio Controller\packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Arduino Code\Arudino.txt" />
