--- a/Audio Controller.csproj
+++ b/Audio Controller.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Security.AccessControl, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Security.AccessControl.4.7.0\lib\net461\System.Security.AccessControl.dll</HintPath>
     </Reference>
@@ -75,6 +76,7 @@
   <ItemGroup>
     <Compile Include="Audio Controller\ConsoleUpdater.cs" />
     <Compile Include="Audio Controller\DataProcessor.cs" />
+    <Compile Include="Audio Controller\MixerIdentifiers.cs" />
     <Compile Include="Audio Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Audio Controller\SerialConnection.cs" />
@@ -85,7 +87,7 @@
     <None Include="Audio Controller\packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Arduino Code\Arudino.txt" />
+    <Content Include="Arduino Code\Arudino.cpp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
