--- a/Audio Controller.csproj
+++ b/Audio Controller.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{713C2C1E-3082-463C-9C4B-C8505813DA99}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>Audio_Controller</RootNamespace>
     <AssemblyName>Audio Controller</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -133,6 +133,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +142,8 @@
     <Compile Include="Audio Controller\ConsoleUpdater.cs" />
     <Compile Include="Audio Controller\DataProcessor.cs" />
     <Compile Include="Audio Controller\MixerIdentifiers.cs" />
+    <Compile Include="Audio Controller\MainForm.cs" />
+    <Compile Include="Audio Controller\MainForm.Designer.cs" />
     <Compile Include="Audio Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Audio Controller\SerialConnection.cs" />
