--- a/Audio Controller.csproj
+++ b/Audio Controller.csproj
@@ -58,7 +58,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -96,6 +96,7 @@
       <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Pipelines, Version=9.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.IO.Pipelines.9.0.0\lib\net462\System.IO.Pipelines.dll</HintPath>
     </Reference>
@@ -143,7 +144,9 @@
     <Compile Include="Audio Controller\ConsoleProgram.cs" />
     <Compile Include="Audio Controller\DataProcessor.cs" />
     <Compile Include="Audio Controller\MixerIdentifiers.cs" />
-    <Compile Include="Audio Controller\MainForm.cs" />
+    <Compile Include="Audio Controller\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Audio Controller\MainForm.Designer.cs" />
     <Compile Include="Audio Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -153,7 +156,6 @@
   <ItemGroup>
     <None Include="Audio Controller\App.config" />
     <None Include="Audio Controller\packages.config" />
-    <None Include="Audio Controller_TemporaryKey.pfx" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
