--- a/Audio Controller.csproj
+++ b/Audio Controller.csproj
@@ -143,7 +143,9 @@
     <Compile Include="Audio Controller\ConsoleProgram.cs" />
     <Compile Include="Audio Controller\DataProcessor.cs" />
     <Compile Include="Audio Controller\MixerIdentifiers.cs" />
-    <Compile Include="Audio Controller\MainForm.cs" />
+    <Compile Include="Audio Controller\MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Audio Controller\MainForm.Designer.cs" />
     <Compile Include="Audio Controller\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
